fix(atomic): made badges wrap on small screens
https://coveord.atlassian.net/browse/KIT-983

--- a/packages/atomic/src/components/atomic-result/atomic-result-cell-mobile.pcss
+++ b/packages/atomic/src/components/atomic-result/atomic-result-cell-mobile.pcss
@@ -21,14 +21,18 @@
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-bottom: 1rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-actions {
       @mixin set-font-size var(--atomic-text-base);
 
       margin-top: 1.25rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-title {
@@ -73,14 +77,18 @@
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-bottom: 1rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-actions {
       @mixin set-font-size var(--atomic-text-base);
 
       margin-top: 1rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-title {
@@ -125,14 +133,18 @@
       @mixin set-font-size var(--atomic-text-sm);
 
       margin-bottom: 1rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-actions {
       @mixin set-font-size var(--atomic-text-base);
 
       margin-top: 0.75rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-title {
@@ -188,11 +200,5 @@
     atomic-result-section-visual {
       display: none;
     }
-  }
-
-  /* == Common styles == */
-  atomic-result-section-badges,
-  atomic-result-section-actions {
-    overflow-x: auto;
   }
 }
