--- a/packages/atomic/src/components/atomic-result/atomic-result-row-mobile.pcss
+++ b/packages/atomic/src/components/atomic-result/atomic-result-row-mobile.pcss
@@ -12,12 +12,16 @@
 
     atomic-result-section-badges {
       margin-bottom: 1rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-actions {
       margin-top: 1rem;
-      height: 2.5rem;
+      --line-height: 2.5rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-title {
@@ -51,12 +55,16 @@
 
     atomic-result-section-badges {
       margin-bottom: 1rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-actions {
       margin-top: 0.75rem;
-      height: 2.5rem;
+      --line-height: 2.5rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-title {
@@ -90,12 +98,16 @@
 
     atomic-result-section-badges {
       margin-bottom: 1rem;
-      height: 2rem;
+      --line-height: 2rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-actions {
       margin-top: 0.5em;
-      height: 2.5rem;
+      --line-height: 2.5rem;
+      line-height: var(--line-height);
+      max-height: calc(2 * var(--line-height) + 0.5rem);
     }
 
     atomic-result-section-title {
