--- a/packages/atomic/src/components/atomic-result/atomic-result-with-sections.pcss
+++ b/packages/atomic/src/components/atomic-result/atomic-result-with-sections.pcss
@@ -9,10 +9,16 @@
 
   atomic-result-section-badges {
     grid-area: badges;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
   }
 
   atomic-result-section-actions {
     grid-area: actions;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
 
     atomic-result-quickview {
       display: inline-block;
