--- a/packages/atomic/src/components/result-template-components/atomic-result-badge/atomic-result-badge.pcss
+++ b/packages/atomic/src/components/result-template-components/atomic-result-badge/atomic-result-badge.pcss
@@ -3,5 +3,5 @@
 :host {
   display: inline-flex;
   place-items: center;
-  height: 100%;
+  height: var(--line-height);
 }
